--- a/facts/src/pages/start/start.html
+++ b/facts/src/pages/start/start.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content>
+  <ion-label>Aantal vragen beantwoord: {{ progress }}</ion-label>
 	<ion-list>
 		<button ion-item (click)="next()">
 			{{title}}
