--- a/facts/src/pages/start/start.html
+++ b/facts/src/pages/start/start.html
@@ -7,10 +7,12 @@
 </ion-header>
 
 <ion-content>
-  <ion-label>Aantal vragen beantwoord: {{ progress }}</ion-label>
+  <ion-label>Set: {{ set_count }}</ion-label>
 	<ion-list>
-		<button ion-item text-wrap (click)="next()">
-			{{title}}
-		</button>
-  	</ion-list>
+		<button ion-item text-wrap (click)="next()">{{title}}</button>
+    <button ion-item text-wrap (click)="next()">{{title}}</button>
+    <button ion-item text-wrap (click)="next()">{{title}}</button>
+    <button ion-item text-wrap (click)="next()">{{title}}</button>
+    <button ion-item text-wrap (click)="next()">{{title}}</button>
+  </ion-list>
 </ion-content>
